# stake-engine-math

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ralph-instructions  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_RELEASE_DESCRIPTION.md  LICENSE  Makefile  PERFORMANCE_PROFILE_0_0_lines.md  PHASE3_COMPLETE_2026-01-15.md  PHASE3_SUMMARY.md  PHASE_2_PLAN.md  PUBLISHING.md  RALPH_TASKS.md  RALPH_TASKS_PHASE3_COMPLETE.md  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  REFACTOR_PROGRESS_2026-01-15.md  RELEASE_NOTES_v2.0.0.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-01-15_PHASE5.md  TYPE_FIXES_LOG.md  benchmark_compression.py  benchmark_event_filtering.py  benchmark_output.txt  event_filtering_benchmark_output.txt  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test_compact_output.py  test_compact_simple.py  test_filtering_simple.py  (+3 more)
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml
compression-benchmarks/: index.html
docs/: README.md  compression-benchmarks.md  config-reference.md  event-audit.md  events.md  game-structure.md  index.md  migration-history.md  optimization.md  performance-analysis.md  performance-optimization-results.md  running-games.md  templates-cluster.md  templates-expanding-wilds.md  templates-lines.md  templates-scatter.md  templates-ways.md  templates.md  testing.md
event-audit/: index.html
events/: index.html
game-structure/: index.html
games/0_0_cluster/: game_calculations.py  run.py  (+1 more)
migration-history/: index.html
optimization/: index.html
optimization_program/: optimization_config.py  run_script.py
performance-analysis/: index.html
performance-optimization-results/: index.html
running-games/: index.html
scripts/: format_books_json.py  get_replay_ids.sh  profile_performance.py  validate_config.py
search/: search_index.json
src/: constants.py  exceptions.py  formatter.py  types.py
testing/: index.html
tests/: test_book_event_filtering.py  test_event_filter.py  test_output_formatter.py
utils/: get_file_hash.py  rgs_verification.py  swap_lookups.py
(+147 files in other folders)
